# AuroraTool

./: CMakeLists.txt  LICENSE  README.md
AuroraClient/: CMakeLists.txt
AuroraClient/include/: AuroraLog.h  AuroraServer.h
AuroraClient/src/: AuroraPackage.cpp
AuroraProxy/: CMakeLists.txt
AuroraProxy/include/: AuroraProxy.h
AuroraProxy/src/: AuroraProxy.cpp  main.cpp
AuroraServer/: CMakeLists.txt
AuroraServer/include/: AuroraServerConfig.h  EventServer.h
AuroraServer/src/: AuroraServerConfig.cpp  main.cpp
common/: AuroraLog.cpp  AuroraPackage.cpp  AuroraPackage.h  EventClient.cpp  EventClient.h  EventServer.cpp  PlatformDef.h
include/: AuroraLog.h  AuroraPackage.h  EventServer.h  PlatformDef.h
src/: AuroraLog.cpp  AuroraServer.cpp  EventServer.cpp  main.cpp
